# OstrichPKI

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PHASE_11_SUMMARY.md  PHASE_12_SUMMARY.md  PHASE_14_PLAN.md  PHASE_14_PROGRESS.md  README.md  ROADMAP.md  WEB_ROADMAP.md  cjA.txt  cjB.txt  deny.toml  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml
.cargo/: audit.toml
benches/: Cargo.toml
benches/benches/: crypto_benchmarks.rs  encoding_benchmarks.rs  x509_benchmarks.rs
benches/src/: lib.rs  utils.rs
benches/test_data/: sample_cert.der
crates/ostrich-acme/: Cargo.toml
crates/ostrich-acme/src/: account.rs  authorization.rs  ca_integration.rs  challenge.rs  error.rs  jws.rs  lib.rs  order.rs  rest.rs  validation.rs
crates/ostrich-audit/: Cargo.toml
crates/ostrich-audit/src/: auth_hook.rs  error.rs  event.rs  lib.rs  session_hook.rs  sink.rs
crates/ostrich-audit/tests/: signed_chain_tamper.rs
crates/ostrich-ca/: Cargo.toml
crates/ostrich-ca/src/: approval.rs  audit_signing_e2e.rs  ca.rs  crl_delta_e2e.rs  error.rs  grpc.rs  issuance.rs  issuance_aia_e2e.rs  lib.rs  pop_e2e.rs  rest.rs  revocation.rs
crates/ostrich-common/: Cargo.toml
crates/ostrich-common/src/: config.rs  error.rs  grpc_client.rs  health.rs  lib.rs  oid.rs  test_constants.rs  tls.rs  types.rs
crates/ostrich-common/src/auth/: audit.rs  basic.rs  lockout.rs  middleware.rs  mod.rs  mtls.rs  password.rs  permissions.rs  provider.rs  rbac.rs  roles.rs  routes.rs  session.rs  user.rs
crates/ostrich-common/src/util/: encoding.rs  mod.rs  random.rs  time.rs  trusted_time.rs
crates/ostrich-crypto/: Cargo.toml  PHASE_10_SUMMARY.md
crates/ostrich-crypto/src/: algorithm.rs  drbg.rs  error.rs  hsm_validation.rs  kem.rs  key.rs  lib.rs  provider.rs  self_test.rs  verify.rs
crates/ostrich-crypto/src/pkcs11/: mod.rs
crates/ostrich-crypto/src/software/: mod.rs
crates/ostrich-crypto/tests/: README.md  pkcs11_integration_test.rs  setup_softhsm.sh
crates/ostrich-db/: Cargo.toml
crates/ostrich-db/src/: error.rs  lib.rs  pool.rs
crates/ostrich-db/src/models/: acme.rs  approval.rs  audit.rs  bulk_enrollment.rs  ca.rs  certificate.rs  crl.rs  est.rs  kra.rs  mod.rs  namespace.rs  scms.rs  system_config.rs
crates/ostrich-db/src/repository/: acme.rs  approval.rs  audit.rs  bulk_enrollment.rs  ca.rs  certificate.rs  crl.rs  est.rs  fqdn.rs  kra.rs  mod.rs  namespace.rs  scms.rs  session.rs  system_config.rs  tamp.rs  users.rs
crates/ostrich-est/: Cargo.toml
crates/ostrich-est/src/: ca_integration.rs  device_cert.rs  enrollment.rs  enrollment_token.rs  error.rs  label.rs  lib.rs  mtls.rs  rest.rs  serverkeygen.rs
crates/ostrich-kra/: Cargo.toml
crates/ostrich-kra/src/: error.rs  escrow.rs  lib.rs  recovery.rs  shamir.rs  wrap.rs
crates/ostrich-kra/tests/: recovery_roundtrip.rs
crates/ostrich-notify-contract/: Cargo.toml
crates/ostrich-notify-contract/src/: lib.rs
crates/ostrich-ocsp/: Cargo.toml
crates/ostrich-ocsp/src/: cache.rs  der_util.rs  error.rs  lib.rs  request.rs  responder.rs  response.rs  rest.rs
crates/ostrich-protocol/: Cargo.toml  build.rs
crates/ostrich-protocol/src/: lib.rs
crates/ostrich-tamp/: Cargo.toml
crates/ostrich-tamp/src/: asn1.rs  cms.rs  error.rs  lib.rs  manager.rs  oids.rs  rest.rs  statuscode.rs
crates/ostrich-x509/: Cargo.toml
crates/ostrich-x509/src/: crl.rs  error.rs  extensions.rs  lib.rs  parser.rs  pkcs12.rs  pkcs7.rs  profile.rs  secure_defaults.rs  signing.rs
crates/ostrich-x509/src/builder/: certificate.rs  crl.rs  csr.rs  mod.rs
crates/ostrich-x509/src/validation/: error.rs  extensions.rs  mod.rs  name_constraints.rs  path_builder.rs  path_validator.rs  policy.rs  revocation.rs  trust_anchor.rs
crates/ostrich-x509/tests/: integration_test.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_crl_parsing.rs  fuzz_der_certificate.rs  fuzz_der_csr.rs  fuzz_jws_signature.rs  fuzz_ocsp_request.rs  fuzz_ocsp_response.rs  fuzz_pem_certificate.rs
services/acme-server/: Cargo.toml
services/acme-server/src/: main.rs
services/ca-server/: Cargo.toml
services/ca-server/src/: expiry_producer.rs  main.rs
services/est-server/: Cargo.toml
services/est-server/src/: config.rs  main.rs
services/kra-server/: Cargo.toml
services/kra-server/src/: main.rs
services/notify-server/: Cargo.toml
services/notify-server/migrations/: 0001_schedules.sql
services/notify-server/src/: config.rs  contract.rs  db.rs  main.rs  scheduler.rs  sender.rs
services/npe-portal/: Cargo.toml
services/npe-portal/examples/: gen_operator_certs.rs
services/npe-portal/src/: main.rs
services/npe-portal/web/: .gitignore  index.html  package.json  vite.config.ts
services/ocsp-server/: Cargo.toml
services/ocsp-server/src/: main.rs
services/scms-server/: Cargo.toml
services/scms-server/src/: main.rs
services/tamp-server/: Cargo.toml
services/tamp-server/src/: main.rs
services/web-ui/: Cargo.toml  Dockerfile  Trunk.toml  index.html  input.css  package-lock.json  tailwind.config.js
services/web-ui/config/: web-ui.json
services/web-ui/src/: main.rs
services/web-ui/web/: .npmrc  ROADMAP.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
tests/: Cargo.toml
tests/integration/: acme_e2e_test.rs  acme_full_flow_test.rs  ca_core_test.rs  csr_parsing_test.rs  docker-compose.yml  est_e2e_test.rs  est_serverkeygen_e2e.rs  fips_signature_openssl_interop.rs  lockout_e2e.rs  mlkem_openssl_interop.rs  mtls_peercert_e2e.rs  ocsp_e2e_test.rs  ocsp_revocation_test.rs  session_store_e2e.rs  tamp_store_e2e.rs
tests/integration/common/: ca_grpc.rs  fixtures.rs  http_client.rs  mod.rs
tests/performance/: README.md  acme-load-test.js  ca-load-test.js  ocsp-load-test.js
tools/ostrich-cli/: Cargo.toml
tools/ostrich-cli/src/: ca.rs  main.rs
tools/ostrich-init/: Cargo.toml
tools/ostrich-init/src/: main.rs
(+279 files in other folders)
