[workspace]
resolver = "2"
members = [
    "crates/ostrich-common",
    "crates/ostrich-crypto",
    "crates/ostrich-x509",
    "crates/ostrich-db",
    "crates/ostrich-audit",
    "crates/ostrich-protocol",
    "crates/ostrich-api",
    "crates/ostrich-ca",
    "crates/ostrich-kra",
    "crates/ostrich-ocsp",
    "crates/ostrich-scms",
    "crates/ostrich-acme",
    "crates/ostrich-est",
    "tools/ostrich-cli",
    "tools/ostrich-init",
    "tests",
    "benches",
]

[workspace.package]
version = "0.13.0"
edition = "2024"
authors = ["OstrichPKI Contributors"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/ostrich-pki"
rust-version = "1.92"

[workspace.dependencies]
# Internal crates
ostrich-common = { path = "crates/ostrich-common" }
ostrich-crypto = { path = "crates/ostrich-crypto" }
ostrich-x509 = { path = "crates/ostrich-x509" }
ostrich-db = { path = "crates/ostrich-db" }
ostrich-audit = { path = "crates/ostrich-audit" }
ostrich-protocol = { path = "crates/ostrich-protocol" }
ostrich-api = { path = "crates/ostrich-api" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1.83"
futures = "0.3.31"

# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# gRPC
tonic = { version = "0.14", features = ["tls-ring", "channel"] }
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Cryptography - RustCrypto ecosystem
x509-cert = { version = "0.2.5", features = ["builder", "pem"] }
x509-parser = "0.16"
der = { version = "0.7", features = ["derive", "alloc", "oid"] }
spki = "0.7"
const-oid = "0.9"
pkcs8 = { version = "0.10", features = ["encryption", "pem"] }
pkcs1 = { version = "0.7", features = ["pem"] }
cms = "0.2"
pem-rfc7468 = { version = "0.7", features = ["alloc"] }
webpki-roots = "0.26"

# Cryptographic primitives
ring = "0.17"
rsa = "0.9"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
digest = "0.10"

# Post-Quantum Cryptography
# Note: These are placeholders - RustCrypto PQC crates are still in development
# ml-kem = "0.1"
# ml-dsa = "0.1"
# slh-dsa = "0.1"

# PKCS#11
cryptoki = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
toml = "0.8"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
base64 = "0.22"
hex = "0.4"
bytes = "1.9"
url = "2.5"
thiserror = "2.0"
anyhow = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
secrecy = "0.10"
rand = "0.8"
rand_core = "0.6"

# HTTP client (for ACME challenge validation)
reqwest = { version = "0.12", features = ["json"] }

# DNS resolver (for ACME DNS-01 challenge)
hickory-resolver = "0.25"
hickory-proto = "0.25"

# TLS (for ACME TLS-ALPN-01 challenge and mTLS)
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = "1.13"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
tokio-test = "0.4"
wiremock = "0.6"
testcontainers = "0.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
