[workspace]
resolver = "2"
members = [
    # Core crates
    "crates/ostrich-common",
    "crates/ostrich-crypto",
    "crates/ostrich-x509",
    "crates/ostrich-db",
    "crates/ostrich-audit",
    "crates/ostrich-protocol",
    "crates/ostrich-api",
    "crates/ostrich-ca",
    "crates/ostrich-kra",
    "crates/ostrich-ocsp",
    "crates/ostrich-scms",
    "crates/ostrich-acme",
    "crates/ostrich-est",
    "crates/ostrich-tamp",
    # Service binaries
    "services/ca-server",
    "services/acme-server",
    "services/est-server",
    "services/ocsp-server",
    "services/scms-server",
    "services/kra-server",
    "services/tamp-server",
    "services/web-ui",
    "services/npe-portal",
    # Tools
    "tools/ostrich-cli",
    "tools/ostrich-init",
    # Testing
    "tests",
    "benches",
]

[workspace.package]
version = "0.15.1"
edition = "2024"
authors = ["OstrichPKI Contributors"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/ostrich-pki"
# Raised to 1.94 by sqlx 0.9 (sqlx-core/macros/postgres require rustc 1.94).
rust-version = "1.94"

[workspace.dependencies]
# Internal crates
ostrich-common = { path = "crates/ostrich-common" }
ostrich-crypto = { path = "crates/ostrich-crypto" }
ostrich-x509 = { path = "crates/ostrich-x509" }
ostrich-db = { path = "crates/ostrich-db" }
ostrich-audit = { path = "crates/ostrich-audit" }
ostrich-protocol = { path = "crates/ostrich-protocol" }
ostrich-api = { path = "crates/ostrich-api" }
ostrich-tamp = { path = "crates/ostrich-tamp" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1.83"
futures = "0.3.31"

# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.7", features = [
    "trace",
    "cors",
    "compression-gzip",
] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# gRPC
tonic = { version = "0.14", features = ["tls-ring", "channel"] }
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# Database
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Cryptography - RustCrypto ecosystem
x509-cert = { version = "0.2.5", features = ["builder", "pem"] }
x509-parser = "0.18"
# Test-only self-signed certificate generation (dev-dependencies).
rcgen = "0.14"
der = { version = "0.7", features = ["derive", "alloc", "oid"] }
spki = "0.7"
# Pinned at 0.9 to match x509-cert 0.2.5's transitive dependency. Bumping to
# 0.10 introduces a type-level split (ObjectIdentifier<39> vs the un-parameterized
# 0.9 type) that propagates through every AttributeType / extn_id usage.
const-oid = { version = "0.9", features = ["db"] }
pkcs8 = { version = "0.10", features = ["encryption", "pem"] }
pkcs1 = { version = "0.7", features = ["pem"] }
cms = "0.2"
pem-rfc7468 = { version = "1", features = ["alloc"] }
webpki-roots = "1.0"

# Cryptographic primitives
ring = "0.17"
rsa = "0.9"
sha2 = "0.10"
sha3 = "0.10"
sha1 = "0.10"
hmac = "0.12"
digest = "0.10"
getrandom = "0.3"
aes = "0.9"
cipher = "0.5"

# Password hashing
argon2 = { version = "0.5", features = ["std"] }

# Post-Quantum Cryptography
# ML-DSA (FIPS 204) and ML-KEM (FIPS 203) via AWS's aws-lc-rs (AWS Libcrypto
# for Rust, backed by AWS-LC). Chosen over RustCrypto because AWS-LC is on the
# FIPS 140-3 validation track including its PQC algorithms.
#   - ML-KEM lives in the STABLE `aws_lc_rs::kem` module (no feature gate) and
#     is present in AWS-LC's FIPS module (aws-lc-fips-sys), so it is the
#     FIPS-validatable PQC path today. >=1.16 is required for
#     DecapsulationKey::key_bytes()/new() (private-key escrow round-trip).
#   - ML-DSA is exposed only by the `unstable` feature, which is mutually
#     exclusive with `fips` (AWS-LC's FIPS module does not yet include ML-DSA)
#     and has no semver guarantee, so the version is pinned.
# POAM: switch to the `fips` feature once AWS-LC ships FIPS-validated ML-DSA.
aws-lc-rs = { version = "1.16", features = ["fips"] }

# PKCS#11
cryptoki = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.15"
toml = "0.9"
jsonschema = "0.46"
regex = "1.11"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
base64 = "0.22"
hex = "0.4"
bytes = "1.9"
url = "2.5"
thiserror = "2.0"
anyhow = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
secrecy = "0.10"
rand = "0.10"
rand_core = "0.10"

# HTTP client (for ACME challenge validation)
reqwest = { version = "0.13", features = ["json"] }

# DNS resolver (for ACME DNS-01 challenge)
hickory-resolver = "0.26"
hickory-proto = "0.26"

# TLS (for ACME TLS-ALPN-01 challenge, mTLS, and HTTPS service binaries)
# The "aws_lc_rs" + "fips" features route the rustls TLS stack through the same
# aws-lc-rs FIPS module the rest of the project uses (see `aws-lc-rs` above), so
# the management/EST TLS endpoints run on FIPS-validated crypto rather than ring,
# which is not FIPS-validated (NIST 800-53: SC-13; NIAP FCS_*). ostrich-common::tls
# selects this provider explicitly via `rustls::crypto::aws_lc_rs::default_provider`.
rustls = { version = "0.23", features = ["aws_lc_rs", "fips"] }
tokio-rustls = "0.26"
rustls-pki-types = "1.13"
# HTTPS serving for axum routers (used by ostrich-common::tls::serve)
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
tokio-test = "0.4"
wiremock = "0.6"
testcontainers = "0.26"

# Web UI (Yew + OIDC)
openidconnect = "4.0"
oauth2 = "5.0"
cookie = { version = "0.18", features = ["secure"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
