[package]
name = "ostrich-integration-tests"
version = "0.14.0"
edition = "2021"
publish = false

[[test]]
name = "acme_e2e_test"
path = "integration/acme_e2e_test.rs"

[[test]]
name = "est_e2e_test"
path = "integration/est_e2e_test.rs"

[[test]]
name = "ca_core_test"
path = "integration/ca_core_test.rs"

[[test]]
name = "ocsp_e2e_test"
path = "integration/ocsp_e2e_test.rs"

[[test]]
name = "csr_parsing_test"
path = "integration/csr_parsing_test.rs"

[[test]]
name = "acme_full_flow_test"
path = "integration/acme_full_flow_test.rs"

[dependencies]
# OstrichPKI crates
ostrich-common = { path = "../crates/ostrich-common" }
ostrich-crypto = { path = "../crates/ostrich-crypto" }
ostrich-db = { path = "../crates/ostrich-db" }
ostrich-protocol = { path = "../crates/ostrich-protocol" }
ostrich-x509 = { path = "../crates/ostrich-x509" }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# gRPC (must match the tonic version used by ostrich-protocol's generated code)
tonic = { workspace = true }

# Async
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
rsa = { version = "0.9", features = ["sha2"] }
p256 = "0.13"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
sha2 = "0.10"
signature = "2.2"
# "builder" feature enables PKCS#10 CSR generation (acme_full_flow_test)
x509-cert = { version = "0.2", features = ["builder"] }
der = "0.7"
base64 = "0.22"

# Utilities
rand = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }
hex = "0.4"
x509-parser = { workspace = true }
