[package]
name = "ostrich-acme"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
ostrich-common = { workspace = true }
ostrich-db = { workspace = true }
ostrich-crypto = { workspace = true }
ostrich-audit = { workspace = true }

# Web
axum = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Cryptography (for JWS validation)
rsa = { workspace = true }
sha2 = { workspace = true }
der = { workspace = true }
spki = { workspace = true }

# Utilities
thiserror = { workspace = true }
