[package]
name = "ostrich-acme"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
ostrich-common = { workspace = true }
ostrich-db = { workspace = true }
ostrich-crypto = { workspace = true }
ostrich-audit = { workspace = true }
ostrich-x509 = { workspace = true }
ostrich-protocol = { workspace = true }

# Web
axum = { workspace = true }

# Async
tokio = { workspace = true }

# gRPC (for CA service integration)
tonic = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Cryptography (for JWS validation and CSR parsing)
rsa = { workspace = true }
sha2 = { workspace = true }
der = { workspace = true }
spki = { workspace = true }
x509-cert = { workspace = true }
x509-parser = { workspace = true }
webpki-roots = { workspace = true }

# HTTP client (for challenge validation)
reqwest = { workspace = true }

# DNS resolver (for DNS-01 challenge validation)
hickory-resolver = { workspace = true }
hickory-proto = { workspace = true }

# TLS (for TLS-ALPN-01 challenge validation)
tokio-rustls = { workspace = true }
rustls = { workspace = true }

# Utilities
thiserror = { workspace = true }
