[package]
name = "ostrich-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Configuration
config = { workspace = true }
toml = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

# Cryptographic types
const-oid = { workspace = true }

# Logging
tracing = { workspace = true }
