[package]
name = "ostrich-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Configuration
config = { workspace = true }
toml = { workspace = true }
jsonschema = { workspace = true }
regex = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

# Cryptographic types
const-oid = { workspace = true }

# Async runtime
tokio = { workspace = true }

# gRPC (for gRPC client infrastructure)
tonic = { workspace = true }

# Logging
tracing = { workspace = true }

# Web framework (for health check endpoints)
axum = { workspace = true }

# Database (for health check database connectivity)
sqlx = { workspace = true }

# Authentication
async-trait = { workspace = true }
secrecy = { workspace = true }
argon2 = { workspace = true }

# Middleware (HTTP)
tower = { workspace = true }

# TLS serving (HTTPS/mTLS for service binaries)
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
axum-server = { workspace = true }
