[package]
name = "ostrich-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
ostrich-common = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Cryptography
ring = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
digest = { workspace = true }
getrandom = { workspace = true }
aes = { workspace = true }
cipher = { workspace = true }

# Encoding
spki = { workspace = true }
der = { workspace = true }
pkcs8 = { workspace = true }
hex = { workspace = true }

# PKCS#11 HSM support
cryptoki = { workspace = true }

# Post-quantum (ML-DSA) via AWS aws-lc-rs
aws-lc-rs = { workspace = true }

# Utilities
zeroize = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
serde_json = { workspace = true }
# sha2 feature wires the SHA-256 OID needed by Pkcs1v15Sign::new in tests
rsa = { workspace = true, features = ["sha2"] }
