[package]
name = "ostrich-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
ostrich-common = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Cryptography
# All classical signature/hash/keygen primitives run inside the FIPS 140-3
# validated AWS-LC module via aws-lc-rs (`fips` feature); see the aws-lc-rs
# entry below. `ring` and the pure-Rust `rsa` crate were removed so no
# non-FIPS signature backend remains in the build. `sha2` is retained only for
# the power-on self-test KAT comparisons in `self_test.rs`.
sha2 = { workspace = true }
digest = { workspace = true }
getrandom = { workspace = true }
aes = { workspace = true }
cipher = { workspace = true }

# Encoding
spki = { workspace = true }
der = { workspace = true }
# pkcs1 is pure ASN.1 (RFC 8017 RSAPublicKey DER) — encoding only, no crypto —
# used to wrap an HSM-extracted RSA modulus/exponent into SPKI.
pkcs1 = { workspace = true }
pkcs8 = { workspace = true }
hex = { workspace = true }

# PKCS#11 HSM support
cryptoki = { workspace = true }

# FIPS 140-3 validated cryptography (AWS-LC FIPS module, `fips` feature set at
# the workspace level): RSA, ECDSA, Ed25519, SHA-2, the SP 800-90A DRBG, and
# ML-KEM (FIPS 203) all run inside the validated boundary. NOTE: the `fips`
# feature is mutually exclusive with `unstable`, so ML-DSA (FIPS 204) is NOT
# available in this build (AWS-LC's FIPS module does not yet include ML-DSA).
aws-lc-rs = { workspace = true }

# Utilities
zeroize = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
serde_json = { workspace = true }
# sha2 feature wires the SHA-256 OID needed by Pkcs1v15Sign::new in tests
rsa = { workspace = true, features = ["sha2"] }
