[package]
name = "ostrich-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
ostrich-common = { workspace = true }
# Certificate parsing for the FQDN SAN index (extract DNS SANs + CN at store time).
ostrich-x509 = { workspace = true }

# Database
sqlx = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

# Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }

# Cryptography (for audit hash verification)
sha2 = { workspace = true }
hex = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
