[package]
name = "ostrich-est"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
ostrich-common = { workspace = true }
ostrich-db = { workspace = true }
ostrich-crypto = { workspace = true }
ostrich-audit = { workspace = true }
ostrich-x509 = { workspace = true }

# Web
axum = { workspace = true }
async-trait = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }

# Cryptography
der = { workspace = true }
cms = { workspace = true }
x509-cert = { workspace = true }
x509-parser = { workspace = true }
sha2 = { workspace = true }

# Utilities
thiserror = { workspace = true }
