[package]
name = "ostrich-est"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# DANGEROUS: enables `ClientCertExtractor::from_header`, which derives a client
# identity from an unverified HTTP header. Development/testing ONLY — never
# enable in production (see crates/ostrich-est/src/mtls.rs).
insecure-dev-auth = []

[dependencies]
# Internal
ostrich-common = { workspace = true }
ostrich-db = { workspace = true }
ostrich-crypto = { workspace = true }
ostrich-audit = { workspace = true }
ostrich-x509 = { workspace = true }
ostrich-protocol = { workspace = true }

# Web
axum = { workspace = true }
async-trait = { workspace = true }

# Async
tokio = { workspace = true }

# gRPC (for CA service integration)
tonic = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }

# Cryptography
der = { workspace = true }
cms = { workspace = true }
x509-cert = { workspace = true }
x509-parser = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

# TLS (for mTLS client authentication)
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }

# Utilities
thiserror = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# MemoryAuditSink for serverkeygen unit tests
ostrich-audit = { workspace = true, features = ["testing"] }
