[package]
name = "ostrich-kra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
ostrich-common = { workspace = true }
ostrich-crypto = { workspace = true }
ostrich-db = { workspace = true }
ostrich-audit = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Utilities
thiserror = { workspace = true }
rand = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
ostrich-audit = { workspace = true, features = ["testing"] }
